--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+  <body ng-app ng-init="name='ivan'">
+    <div ng-show="true"> hi Ivan!!! </div>
+    <input ng-model="name"/>
+    <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
+    <p ng-bind="name"></p>
+    </body>
 </body>
 
 </html>
