fix/functions, change menthod bootstrap and add ul>li to html

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
     <input ng-model="name"/>
     <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
     <p ng-bind="name"></p>
+    <ul>
+      <li ng-make-long="some">One</li>
+    </ul>
     </body>
 </body>
 
