--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Angular</title>
 </head>
 
-<body ng-app ng-init="name='ivan'">
+<body ng-app ng-init="name='serhii'">
     <div ng-show="true"> hi Ivan!!! </div>
     <input ng-model="name"/>
     <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
@@ -15,6 +15,7 @@
     <ul>
       <li ng-make-long="some">One</li>
     </ul>
+    <button ng-click="name='guffey'">Click Me</button>
 </body>
 
 </html>
