makeInit, add directive init

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Angular</title>
 </head>
 
-<body ng-app>
+<body ng-app ng-init="test=false">
     <div ng-show="test === false"> hi Ivan!!! </div>
     <input ng-model="name"/>
     <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
