makeHide, add directive hide

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 <body ng-app ng-init="test=false">
     <div ng-show="test === false"> hi Ivan!!! </div>
+    <div ng-hide="test === false">Hello i am hide</div>
     <input ng-model="name"/>
     <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
     <p ng-bind="name"></p>
