makeBind, add directive bind

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div ng-hide="test === false">Hello i am hide</div>
     <input ng-model="name"/>
     <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
-    <p ng-bind="name"></p>
+    <p ng-bind="test"></p>
     <ul>
       <li ng-make-long="some">One</li>
     </ul>
