fixNgBind, add initialization value in ng-bind

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Angular</title>
 </head>
 
-<body ng-app ng-init="test=false">
+<body ng-app ng-init="test=false; name='ivan'">
     <div ng-show="test === false"> hi Ivan!!! </div>
     <div ng-hide="test === false">Hello i am hide</div>
     <input ng-model="name"/>
