--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <div ng-show="test === false"> hi Ivan!!! </div>
     <div ng-hide="test === false">Hello i am hide</div>
     <input ng-model="name"/>
-    <p ng-make-short>qqq qqq qqq qqq qqq qqq qqq</p>
+    <p ng-make-short length="10">qqq qqq qqq qqq qqq qqq qqq</p>
     <p ng-bind="name"></p>
     <ul>
       <li ng-repeat="letter in name"></li>
