makeToUpperCase, add directive ng-uppercase

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body ng-app ng-init="test=false; name='ivan'">
-    <div ng-show="test === false"> hi Ivan!!! </div>
+    <div ng-show="test === false" ng-uppercase> hi Ivan!!! </div>
     <div ng-hide="test === false">Hello i am hide</div>
     <input ng-model="name"/>
     <p ng-make-short length="10">qqq qqq qqq qqq qqq qqq qqq</p>
