fixModel, add watcher to ng-model

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       <p ng-hide="test === false">Hello my name is Anatolia</p>
     </div>
       <input ng-model="name"/>
+      <input ng-model="name"/>
       <p>This is long string
         <span ng-make-short length="10">qqq qqq qqq qqq qqq qqq qqq</span>
       </p>
