fixMistakes, *change tag p content; *put attrebutes to call func in compile; *remove Array.from from directive ng-repeat; *change directive ng-make-short; *change first argument in $watch all directives;

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <input ng-model="name"/>
       <input ng-model="name"/>
       <p>This is long string
-        <span ng-make-short length="10">qqq qqq qqq qqq qqq qqq qqq</span>
+        <span ng-make-short length="10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et modi ut sequi minima? Dolore repellat eaque blanditiis tempora obcaecati totam?</span>
       </p>
       <p>This is your value: 
         <span ng-bind="name"></span>
